@@ -38,6 +38,7 @@ import org.springframework.util.Assert;
  * @author Artem Bilan
  * @author Artem Yakshin
  * @author Johnny Lim
+ * @author Lukasz Kaminski
  */
 public class ContainerProperties extends ConsumerProperties {
 
@@ -600,7 +601,7 @@ public class ContainerProperties extends ConsumerProperties {
 	 * When using a batch message listener whether to dispatch records by partition (with
 	 * a transaction for each sub batch if transactions are in use) or the complete batch
 	 * received by the {@code poll()}. Useful when using transactions to enable zombie
-	 * fencing, by using a {code transactional.id} that is unique for each
+	 * fencing, by using a {@code transactional.id} that is unique for each
 	 * group/topic/partition.
 	 * @param subBatchPerPartition true for a separate transaction for each partition.
 	 * @since 2.3.2
